# G4SONIK

./: .gitignore  0.25keV.dat~  0.75keV.dat~  1keV.dat~  38Ar(p,g).dat~  38Ar(p,g)~  3He(a,a).dat~  76Se(a,a).dat~  7Be(a,a).dat~  CMakeLists.txt  CS.root  DetectorConstruction2.cc~  Events0.root  Events1.root  Events_18F.root  G4SONIKenv.sh  GNUmakefile  GNUmakefile~  README.md  README.txt  README.txt~  Regular.dat~  SONIK.dat~  SONIK_20_10.dat~  Table0.tsv  Table1.tsv  Table_18F.tsv  bashrcSegment  c.txt~  c0.txt~  c1.txt~  c2.txt~  c3.txt~  c5.txt~  c6.txt~  c7.txt~  c8.txt~  c9.txt~  changelog.txt  changelog.txt~  (+23 more)
0.5mm_10torr/: 20_3.203.root  20_4.694.root  20_7.090.root  20_8.728.root  55_5.918.root  55_6.272.root  55_6.790.root  55_7.090.root  55_8.728.root
15N(a,a)/: CS.root  Events0.root  c0.txt~  c1.txt  c5.txt  c7.txt  c8.txt  c9.txt  kin.root
15N_aa/: c0.txt  c2.txt  c3.txt  c4.txt  c6.txt  config.txt  currentEvent.rndm  env.sh  run0.sh  run1.sh  run2.sh  vis.mac
18F(p,p)/: CS.root  c.txt~  currentEvent.rndm  kin.root
18F_pp/: c.txt  config_18F
21Ne(p,p)/: CS.root  c.txt~  currentEvent.rndm  kin.root
21Ne_pp/: c.txt
26Al(p,p)/: CS.root  Events0.root  Events1.root  Events2.root  Events3.root  Events4.root  c4.txt  c5.txt  currentEvent.rndm  kin.root  run0.sh  run0.sh~  run1.sh
26Al_pp/: c0.txt  c1.txt  c2.txt  c3.txt  c6.txt
SONIK_He3/: README.txt  README.txt~  changelog.txt~  log.txt~  multirun.sh
include/: CrossCalc.hxx  CrossCalc_1.hxx  CrossCalc_2.hxx  CrossCalc_exp.hxx  CrossSectionManager.hh  CrossSectionManager.hh~  DetectorConstruction.hh  DetectorConstruction.hh~  DetectorConstructionSONIK.hh~  EventAction.hh  ExN01DetectorConstruction.hh~  InputManager.hh  KinManager.hh  KinManager.hh~  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh~  ResultsManager.hh  ResultsManager.hh~  RunAction.hh  RunAction.hh~  TrackerHit.hh  TrackerHit.hh~  (+4 more)
include (copy2)/: CrossSectionManager.hh  CrossSectionManager.hh~  EventAction.hh  EventAction.hh~  InputManager.hh~  PrimaryGeneratorAction.hh  TreeManager.hh  TreeManager.hh~
include (original)/: CrossCalc.hxx  CrossSectionManager.hh  DetectorConstruction.hh  DetectorConstruction.hh~  HistoManager.hh~  KinManager.hh  KinManager.hh~  PrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh~  RunAction.hh  TrackerHit.hh~  TrackerSD.hh  TrackerSD.hh~  TreeManager.hh  TreeManager.hh~  global.hh~
(+1058 files in other folders)
